--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,13 @@ ASALocalRun/
 .localhistory/
 healthchecksdb
 MigrationBackup/
+**/*.out(![Gg]it)*
+**/*(!git/
+*(![Gg]it)*
+*).git/
+*(.git/
+*(!git/
+*([Gg]it/
+.*/
+(packages)
+*.skb
